--- a/index.html
+++ b/index.html
@@ -106,14 +106,14 @@
                   <li><i class="icofont-rounded-right"></i> <strong>Birthday:</strong> 22 March 1995</li>
                   <li><i class="icofont-rounded-right"></i> <strong>Website:</strong> www.sairamsrivatsavai.com</li>
                   <li><i class="icofont-rounded-right"></i> <strong>Phone:</strong> +1 937 838 9577</li>
-                  <li><i class="icofont-rounded-right"></i> <strong>City:</strong> City : Lexington, USA</li>
+                  <li><i class="icofont-rounded-right"></i> <strong>City:</strong> Lexington, USA</li>
                 </ul>
               </div>
               <div class="col-lg-6">
                 <ul>
                   <li><i class="icofont-rounded-right"></i> <strong>Age:</strong> 25</li>
                   <li><i class="icofont-rounded-right"></i> <strong>Degree:</strong> Master</li>
-                  <li><i class="icofont-rounded-right"></i> <strong>E-mail:</strong>sairamvgraju@gmail.com</li>
+                  <li><i class="icofont-rounded-right"></i> <strong>E-mail:</strong> sairamvgraju@gmail.com</li>
 
                 </ul>
               </div>
