--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p>I am Master's student working on Reservoir Computing and Photonics as major reseacrh interests. I am also a software developer with experience in JAVA and Workfusion Rotobotic process Automation in Banking domain.</p>
+          <p>I am Master's student working on Reservoir Computing and Photonics as major reseacrh interests. I am also a software developer with experience in JAVA and Workfusion Robotic process Automation in Banking domain.</p>
         </div>
 
         <div class="row">
@@ -103,7 +103,7 @@
             <div class="row">
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="icofont-rounded-right"></i> <strong>Birthday:</strong> 22 March 1995</li>
+                  <li><i class="icofont-rounded-right"></i> <strong>Birthday:</strong> March 1995</li>
                   <li><i class="icofont-rounded-right"></i> <strong>Website:</strong> www.sairamsrivatsavai.com</li>
                   <li><i class="icofont-rounded-right"></i> <strong>Phone:</strong> +1 937 838 9577</li>
                   <li><i class="icofont-rounded-right"></i> <strong>City:</strong> Lexington, USA</li>
@@ -112,7 +112,7 @@
               <div class="col-lg-6">
                 <ul>
                   <li><i class="icofont-rounded-right"></i> <strong>Age:</strong> 25</li>
-                  <li><i class="icofont-rounded-right"></i> <strong>Degree:</strong> Master</li>
+                  <li><i class="icofont-rounded-right"></i> <strong>Degree:</strong> Masters</li>
                   <li><i class="icofont-rounded-right"></i> <strong>E-mail:</strong> sairamvgraju@gmail.com</li>
 
                 </ul>
@@ -174,7 +174,7 @@
         </div>
 
       </div>
-    </section><!-- End Facts Section --> 
+    </section><!-- End Facts Section -->
 
     <!-- ======= Skills Section ======= -->
     <section id="skills" class="skills section-bg">
