--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p>I am Master's student working on Reservoir Computing and Photonics as major reseacrh interests. I am also a software developer with experience in JAVA and Workfusion Robotic process Automation in Banking domain.</p>
+          <p>I am Master's student working on Reservoir Computing and Photonics as major research interests. I am also a software developer with experience in JAVA and Workfusion Robotic process Automation in Banking domain.</p>
         </div>
 
         <div class="row">
