corrected orientation of images in firefox

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 
         <div class="row">
           <div class="col-lg-4" data-aos="fade-right">
-            <img src="assets/img/backdrouppic.jpg" class="img-fluid" alt="">
+            <img src="assets/img/backdrouppic.jpg" class="img-fluid" alt="" style="image-orientation: from-image">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
             <h3>Aspiring Machine Learning Engineer,Java Developer&amp; Workfusion MLE.</h3>
