--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <div class="d-flex flex-column">
 
       <div class="profile">
-        <img src="assets/img/dp.jpg" alt="" class="img-fluid rounded-circle">
+        <img src="assets/img/dp.webp" alt="" class="img-fluid rounded-circle">
         <h1 class="text-light"><a href="index.html">Sairam Sri Vatsavai</a></h1>
         <div class="social-links mt-3 text-center">
           <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
@@ -92,7 +92,7 @@
 
         <div class="row">
           <div class="col-lg-4" data-aos="fade-right">
-            <img src="assets/img/backdrouppic.jpg" class="img-fluid" alt="" style="image-orientation: from-image">
+            <img src="assets/img/backdrouppic.webp" class="img-fluid" alt="" style="image-orientation: from-image">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
             <h3>Aspiring Machine Learning Engineer,Java Developer&amp; Workfusion MLE.</h3>
