--- a/index.html
+++ b/index.html
@@ -449,7 +449,7 @@
         </div>
 
       </div>
-    </section><!-- End Portfolio Section --> -->
+    </section><!-- End Portfolio Section -->
 
 
 
