removed sensitive info

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                   <li><i class="icofont-rounded-right"></i> <strong>Birthday:</strong> March 1995</li>
                   <li><i class="icofont-rounded-right"></i> <strong>Website:</strong> www.sairamsrivatsavai.com</li>
                   <li><i class="icofont-rounded-right"></i> <strong>Phone:</strong> +1 937 838 9577</li>
-                  <li><i class="icofont-rounded-right"></i> <strong>City:</strong> Lexington, USA</li>
+                  <li><i class="icofont-rounded-right"></i> <strong>City:</strong>Kentucky, USA</li>
                 </ul>
               </div>
               <div class="col-lg-6">
@@ -471,7 +471,7 @@
               <div class="address">
                 <i class="icofont-google-map"></i>
                 <h4>Location:</h4>
-                <p>137 Rose Street, 212 Apt, Lexington KY - 40507</p>
+                <p>Lexington KY - 40507</p>
               </div>
 
               <div class="email">
@@ -486,8 +486,7 @@
                 <p>+1 937 838 9577</p>
               </div>
 
-              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3142.2017963813255!2d-84.49634308471616!3d38.04238407971161!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x884244e9a5f772ab%3A0x9f155668db114984!2s137%20Rose%20St%2C%20Lexington%2C%20KY%2040507!5e0!3m2!1sen!2sus!4v1590071526995!5m2!1sen!2sus" width="400" height="300" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>      </div>
-
+             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3142.3427672111607!2d-84.50066188471628!3d38.039098879712235!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x884244c1ca814101%3A0xe2cedb0ac06eef2!2sDavis%20Marksbury%20Building%2C!5e0!3m2!1sen!2sus!4v1590082688223!5m2!1sen!2sus" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
           </div>
 
           <div class="col-lg-7 mt-5 mt-lg-0 d-flex align-items-stretch">
