--- a/index.html
+++ b/index.html
@@ -486,8 +486,7 @@
                 <p>+1 937 838 9577</p>
               </div>
 
-             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3142.3427672111607!2d-84.50066188471628!3d38.039098879712235!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x884244c1ca814101%3A0xe2cedb0ac06eef2!2sDavis%20Marksbury%20Building%2C!5e0!3m2!1sen!2sus!4v1590082688223!5m2!1sen!2sus" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
-          </div>
+             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3142.3427672111607!2d-84.50066188471627!3d38.039098879712235!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x884244c1ca814101%3A0xe2cedb0ac06eef2!2sDavis%20Marksbury%20Building%2C!5e0!3m2!1sen!2sus!4v1590082870922!5m2!1sen!2sus" width="400" height="300" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>  </div>
 
           <div class="col-lg-7 mt-5 mt-lg-0 d-flex align-items-stretch">
             <form action="forms/contact.php" method="post" role="form" class="php-email-form">
