--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p>I am Master's student working on Reservoir Computing and Photonics as major research interests. I am also a software developer with experience in JAVA and Workfusion Robotic process Automation in Banking domain.</p>
+          <p>I am PhD student developing accelerators for Neural Networks and Reservoir Computing employing Silicon Photonics. I am experienced in developing enterprise solutions using JAVA and Workfusion Robotic process Automation.</p>
         </div>
 
         <div class="row">
@@ -95,7 +95,7 @@
             <img src="assets/img/backdrouppic.webp" class="img-fluid" alt="" style="image-orientation: from-image">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
-            <h3>Aspiring Machine Learning Engineer,Java Developer&amp; Workfusion MLE.</h3>
+            <h3>Machine Learning Engineer,Java Developer&amp; Workfusion MLE.</h3>
             <!-- <p class="font-italic">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
               magna aliqua.
@@ -112,7 +112,7 @@
               <div class="col-lg-6">
                 <ul>
                   <li><i class="icofont-rounded-right"></i> <strong>Age:</strong> 25</li>
-                  <li><i class="icofont-rounded-right"></i> <strong>Degree:</strong> Masters</li>
+                  <li><i class="icofont-rounded-right"></i> <strong>Degree:</strong> PhD</li>
                   <li><i class="icofont-rounded-right"></i> <strong>E-mail:</strong> sairamvgraju@gmail.com</li>
 
                 </ul>
@@ -197,14 +197,14 @@
             </div>
 
             <div class="progress">
-              <span class="skill">Machine Learning <i class="val">60% <i class="glyphicon glyphicon-arrow-up green"></i></i> </span>
+              <span class="skill">Machine Learning <i class="val">80% <i class="glyphicon glyphicon-arrow-up green"></i></i> </span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
             <div class="progress">
-              <span class="skill">Python  <i class="val">70%</i></span>
+              <span class="skill">Python  <i class="val">85%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
@@ -229,7 +229,7 @@
             </div>
 
             <div class="progress">
-              <span class="skill">Photonics <i class="val">50%</i></span>
+              <span class="skill">Silicon Photonics <i class="val">80%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
