--- a/index.html
+++ b/index.html
@@ -275,6 +275,7 @@
                 <span class="sr-only">Loading...</span>
               </div>
           <p>Work in Progress.</p>
+          <a href="sairamsrivatsavai.github.io/asset/Sairam_ML_Resume.docx" target="_blank">PDF.</a>
         </div>
 
         <!-- <div class="row" display:none>
