--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
       <div class="container">
 
         <div class="section-title">
-          <h2>Resume <a href="sairamsrivatsavai.github.io/assets/Sairam_ML_Resume.docx" target="_blank"></a></h2>
+          <h2>Resume <a href="sairamsrivatsavai.github.io/assets/Sairam_Sri_Vatsavai_Resume.pdf" target="_blank"/a></h2>
 <!--           Loading...
 
               <div class="spinner-grow text-primary" role="status">
