--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
       <h1>Sairam Sri Vatsavai</h1>
-      <p>I'm <span class="typed" data-typed-items="Java Developer,Reservoir Computing Researcher, Machine Learning Engineer,Aspiring Data Scientist"></span></p>
+      <p>I'm <span class="typed" data-typed-items="Machine Learning Engineer,Java Developer,Neural Network Accelerator Designer, Reservoir Computing Researcher"></span></p>
     </div>
   </section><!-- End Hero -->
 
