--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
+  <link href="assets/img/dp.jpeg" rel="icon">
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
@@ -200,7 +200,7 @@
     <section id="resume" class="resume">
       <div class="container">
 
-        <div class="section-title spinner-grow text-primary">
+        <div class="section-title">
           <h2><a href="/assets/Sairam_Sri_Vatsavai_Resume.pdf" target="_blank"/a>Resume </h2>
 <!--           Loading...
 
