--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
 
 
     <!-- ======= Contact Section ======= -->
-    <section id="contact" class="contact">
+<!--     <section id="contact" class="contact">
       <div class="container">
 
         <div class="section-title">
@@ -308,7 +308,7 @@
         </div>
 
       </div>
-    </section><!-- End Contact Section -->
+    </section><!-- End Contact Section --> -->
 
   </main><!-- End #main -->
 
