--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
           <a href="https://twitter.com/sairam_varma" class="twitter"><i class="bx bxl-twitter"></i></a>
           <a href="https://scholar.google.com/citations?user=RZe7BroAAAAJ&hl=en" class="googlescholar"><i class="ai ai-google-scholar-square ai-1x"></i></a>
           <a href="https://www.linkedin.com/in/sairam-sri-vatsavai-27311290/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
-            <a href="https://github.com/Sairam954/" class="github"><i class="fab fa-github"></i></a>
+            <a href="https://github.com/Sairam954/" class="github"><i class="fas fa-clock"></i></a>
         </div>
       </div>
 
