removing awesome font to handle github pages issues

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   <title>Sairam Sri Vatsavai</title>
   <meta content="" name="descriptison">
   <meta content="" name="keywords">
+    
+             <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 
   <!-- Favicons -->
 
@@ -19,9 +21,9 @@
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/jpswalsh/academicons@1/css/academicons.min.css">
+    <script src="https://code.iconify.design/1/1.0.7/iconify.min.js"></script>
   
-  <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
-
+  
 
   <!-- Vendor CSS Files -->
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -57,7 +59,7 @@
           <a href="https://twitter.com/sairam_varma" class="twitter"><i class="bx bxl-twitter"></i></a>
           <a href="https://scholar.google.com/citations?user=RZe7BroAAAAJ&hl=en" class="googlescholar"><i class="ai ai-google-scholar-square ai-1x"></i></a>
           <a href="https://www.linkedin.com/in/sairam-sri-vatsavai-27311290/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
-            <a href="https://github.com/Sairam954/" class="github"><i class="fas fa-clock"></i></a>
+            <a href="https://github.com/Sairam954/" class="github"><span class="iconify" data-icon="bi:github" data-inline="false"></span></a>
         </div>
       </div>
 
