--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta content="" name="descriptison">
   <meta content="" name="keywords">
     
-             <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+<!--             <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">-->
 
   <!-- Favicons -->
 
@@ -21,7 +21,7 @@
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/jpswalsh/academicons@1/css/academicons.min.css">
-    <script src="https://code.iconify.design/1/1.0.7/iconify.min.js"></script>
+<!--    <script src="https://code.iconify.design/1/1.0.7/iconify.min.js"></script>-->
   
   
 
