removing twitter and adding hackerrank quick link

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/jpswalsh/academicons@1/css/academicons.min.css">
-<!--    <script src="https://code.iconify.design/1/1.0.7/iconify.min.js"></script>-->
+    <script src="https://code.iconify.design/1/1.0.7/iconify.min.js"></script>
   
   
 
@@ -56,10 +56,10 @@
         <img src="assets/img/page_dp.jpg" alt="" class="img-fluid rounded-circle">
         <h1 class="text-light"><a href="index.html">Sairam Sri Vatsavai</a></h1>
         <div class="social-links mt-3 text-center">
-          <a href="https://twitter.com/sairam_varma" class="twitter"><i class="bx bxl-twitter"></i></a>
+          <a href="https://www.hackerrank.com/sairamvgraju" class="twitter"><span class="iconify" data-icon="cib:hackerrank" data-inline="false"></span></a>
           <a href="https://scholar.google.com/citations?user=RZe7BroAAAAJ&hl=en" class="googlescholar"><i class="ai ai-google-scholar-square ai-1x"></i></a>
           <a href="https://www.linkedin.com/in/sairam-sri-vatsavai-27311290/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
-            <a href="https://github.com/Sairam954/" class="github"><span class="iconify" data-icon="bi:github" data-inline="false"></span></a>
+         <a href="https://github.com/Sairam954/" class="github"><span class="iconify" data-icon="bi:github" data-inline="false"></span></a>
         </div>
       </div>
 
