--- a/index.html
+++ b/index.html
@@ -113,13 +113,13 @@
                   <li><i class="icofont-rounded-right"></i> <strong>Birthday:</strong> March 1995</li>
                   <li><i class="icofont-rounded-right"></i> <strong>Website:</strong> www.sairamsrivatsavai.com</li>
                   <li><i class="icofont-rounded-right"></i> <strong>Phone:</strong> +1 937 838 9577</li>
-                  <li><i class="icofont-rounded-right"></i> <strong>City:</strong>Kentucky, USA</li>
+                  <li><i class="icofont-rounded-right"></i> <strong>City:</strong>Lexington, Kenctucky</li>
                 </ul>
               </div>
               <div class="col-lg-6">
                 <ul>
                   <li><i class="icofont-rounded-right"></i> <strong>Age:</strong> 25</li>
-                  <li><i class="icofont-rounded-right"></i> <strong>Degree:</strong> PhD in Electrical Engineering</li>
+                  <li><i class="icofont-rounded-right"></i> <strong>Degree:</strong>Pursuing PhD in Electrical Engineering</li>
                   <li><i class="icofont-rounded-right"></i> <strong>E-mail:</strong> sairamvgraju@gmail.com</li>
 
                 </ul>
