--- a/index.html
+++ b/index.html
@@ -126,9 +126,8 @@
               </div>
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="icofont-rounded-right"></i> <strong>Age:</strong> 25</li>
                   <li><i class="icofont-rounded-right"></i> <strong>Degree:</strong>Pursuing PhD in Electrical
-                    Engineering</li>
+                    Engineering at University of Kentucky</li>
                   <li><i class="icofont-rounded-right"></i> <strong>E-mail:</strong> sairamvgraju@gmail.com</li>
 
                 </ul>
